# OptixDenoiserWrapper

./: .gitignore  CMakeLists.txt  OptixDenoiser.cs  optix_denoiser_wrapper.cpp  optix_denoiser_wrapper.h  test.cpp
.gitignore/: .gitignore
CMake/: FindOptiX.cmake
